# wikirace-arena

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  api.py  eslint.config.js  get_wikihop.py  llm_client.py  package.json  pyproject.toml  tsconfig.app.json
.github/workflows/: ci.yml
docs/ux-audit/: view-runs-play-game-ux-recommendations.md
parallel_eval/: README.md  game.py  proctor.py
scripts/: generate-ux-audit.mjs  play-game-regression-runner.mjs  play-game-regression.mjs
src/: App.tsx  index.css  main.tsx
src/components/: about-tab.tsx  confetti-canvas.tsx  force-directed-graph.tsx  game-component.tsx  hops-sparkline.tsx  llm-run-manager.tsx  matchup-arena.tsx  model-picker.tsx  play-tab.tsx  reasoning-trace.tsx  runs-list.tsx  solo-play.tsx  viewer-tab.tsx  wiki-article-preview.tsx  wiki-summary-card.tsx
src/components/multiplayer/: multiplayer-arena.tsx  multiplayer-lobby.tsx  multiplayer-play.tsx  multiplayer-round-setup.tsx  multiplayer-setup.tsx
src/components/race/: add-ai-form.tsx  (+6 more)
src/lib/: constants.ts  hops.ts  inference.tsx  llm-display.ts  llm-runner.ts  local-race-driver.ts  local-run-tracing.ts  matchup-random.ts  model-presets.ts  motion.ts  multiplayer-race-driver.ts  multiplayer-store.ts  multiplayer-types.ts  number-utils.ts  race-driver.ts  race-participants.ts  race-presets.ts  race-state.ts  run-display.ts  run-metrics.ts  session-store.ts  session-to-viewer.ts  session-types.ts  session-utils.ts  storage.ts  theme-colors.ts  use-media-query.ts  viewer-datasets.ts  wiki-canonical.ts  wiki-title.ts  win-summaries.ts
(+11 files in other folders)
