[project]
name = "wikiracing-llms"
version = "0.0.0"
description = "WikiRacing (humans vs LLM agents) + visualization UI"
requires-python = ">=3.9"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.2",
  "litellm>=1.10.0",
  "aiohttp>=3.9.0",
  "tqdm>=4.66.0",
  "datasets>=2.18.0",
]
