[project]
name = "wikiracing-llms"
version = "0.0.0"
description = "WikiRacing (humans vs LLM agents) + visualization UI"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.2",
  "aiohttp>=3.9.0",
  "tqdm>=4.66.0",
  "datasets>=2.18.0",
  "ruff>=0.14.9",
  "pydantic-ai>=1.22.0",
  "logfire>=4.0.0",
  "python-dotenv>=1.0.0",
]
